--- a/atividade_01_04/atividade2/index.html
+++ b/atividade_01_04/atividade2/index.html
@@ -20,7 +20,7 @@
         <main>
             <div class="row">
                 <section>
-                    <div class="col-4">
+                    <div class="col-4 col-s-8">
                         <div class="paragrafo"> 
                             <h2>Item 1</h2> 
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam repellendus accusamus iure. Sit reprehenderit magni saepe neque ratione inventore facere earum, dolore provident 
@@ -32,7 +32,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 col-s-8">
                         <div class="paragrafo">
                             <h2>Item 2</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam repellendus accusamus iure. Sit reprehenderit magni saepe neque ratione inventore facere earum, dolore provident 
@@ -44,7 +44,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 col-s-8">
                         <div class="paragrafo">
                             <h2>Item 3</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam repellendus accusamus iure. Sit reprehenderit magni saepe neque ratione inventore facere earum, dolore provident 
